--- a/EnglishBrowser/res/layout/activity_main.xml
+++ b/EnglishBrowser/res/layout/activity_main.xml
@@ -1,45 +1,32 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
 
-        <EditText
-            android:id="@+id/ID_Url"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:background="#202060"
-            android:ems="10"
-            android:inputType="textUri"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:textColor="#ffffff" />
+    <EditText
+        android:id="@+id/ID_Url"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#202060"
+        android:ems="10"
+        android:inputType="textUri"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp"
+        android:textColor="#ffffff" />
 
-        <ScrollView
-            android:id="@+id/ID_WordScrollView"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            android:layout_alignParentBottom="true"
-            android:background="#202020"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp" >
-        
-	        <TextView
-    	        android:id="@+id/ID_TxtWord"
-        	    android:layout_width="match_parent"
-            	android:layout_height="wrap_content"
-    	        android:textSize="20sp"
-        	    android:textColor="#ffffff" />
-        
-        </ScrollView>
-        
-        <ScrollView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        >
+  
+       <ScrollView
             android:id="@+id/ID_ArticlesScrollView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@id/ID_WordScrollView"
-            android:layout_below="@id/ID_Url"
+            android:layout_height="0dp"
+            android:layout_weight="2" 
             android:background="#ffffff"
             android:paddingBottom="4dp"
             android:paddingLeft="40dp"
@@ -58,5 +45,25 @@
                 android:typeface="normal" />
 
         </ScrollView>
+            
+        <ScrollView
+            android:id="@+id/ID_WordScrollView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" 
+            android:background="#202020"
+            android:paddingBottom="4dp"
+            android:paddingTop="4dp" >
         
-</RelativeLayout>
+	        <TextView
+    	        android:id="@+id/ID_TxtWord"
+        	    android:layout_width="match_parent"
+            	android:layout_height="wrap_content"
+    	        android:textSize="20sp"
+        	    android:textColor="#ffffff" />
+        
+        </ScrollView>
+        
+     </LinearLayout>
+        
+</LinearLayout>
